# CppReflection

./: CMakeLists.txt
src/: AbstractParserBackend.h  DaevaCodeGenerator.cpp  DaevaCodeGenerator.h  Main.cpp  ParserBackendClang.cpp  cpp_class.hpp  lex.cpp  lex.hpp  parser.cpp  parser.hpp  reflect_code_gen.cpp  reflect_code_gen.hpp
src/Structs/: Class.h
src2/: AbstractParserBackend.cpp  CodeGenerator.h  DaevaCodeGenerator.cpp  Main.cpp  ParserBackendClang.cpp  ParserBackendClang.h
